[gd_scene load_steps=36 format=3 uid="uid://dh7km5x273aj5"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_21q2e"]
[ext_resource type="Shader" path="res://Shaders/enemy_effect.gdshader" id="1_r842q"]
[ext_resource type="Resource" uid="uid://b1bpa5nlchkge" path="res://Resources/CharacterStats/player_stats.tres" id="2_4kkqg"]
[ext_resource type="Texture2D" uid="uid://m535eocww8qy" path="res://Assets/Player/Character.png" id="3_ciwtm"]
[ext_resource type="Texture2D" uid="uid://difwwcyxvnnwy" path="res://Assets/Player/CharacterAttack.png" id="3_xtsf2"]
[ext_resource type="Script" path="res://Scripts/Player/States/disabled.gd" id="5_gdnv1"]
[ext_resource type="PackedScene" uid="uid://hgxj36l2xb1r" path="res://Scenes/CharacterGeneral/HitBox/hit_box.tscn" id="5_rul6q"]
[ext_resource type="PackedScene" uid="uid://t1u8nos8d5n0" path="res://Scenes/CharacterGeneral/HurtBox/hurt_box.tscn" id="6_3pb5t"]
[ext_resource type="Script" path="res://Scripts/Player/States/idle.gd" id="6_st8sj"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="7_456yf"]
[ext_resource type="Script" path="res://Scripts/Player/States/move.gd" id="7_psgwk"]
[ext_resource type="Script" path="res://Scripts/Player/States/jump.gd" id="8_h7yd5"]
[ext_resource type="Script" path="res://Scripts/Player/States/fall.gd" id="9_vbw5a"]
[ext_resource type="Script" path="res://Scripts/Player/States/attack.gd" id="10_k6bx0"]
[ext_resource type="Script" path="res://Scripts/Player/States/up_attack.gd" id="11_3smkc"]
[ext_resource type="Script" path="res://Scripts/Player/States/hit.gd" id="17_ej8d0"]
[ext_resource type="Script" path="res://Scripts/Player/States/death.gd" id="18_lsdg7"]
[ext_resource type="Texture2D" uid="uid://dl1iicradvtiv" path="res://Assets/Player/CharacterMove.png" id="18_rvfy7"]
[ext_resource type="Texture2D" uid="uid://dntfkf43mvsk0" path="res://Assets/Player/CharacterJump.png" id="20_kxuv8"]
[ext_resource type="Texture2D" uid="uid://cbsxrux02yf14" path="res://Assets/Player/CharacterUpAttack.png" id="21_n2w74"]
[ext_resource type="Texture2D" uid="uid://dehtdf2plavbk" path="res://Assets/Player/CharacterFall.png" id="21_ope30"]
[ext_resource type="PackedScene" uid="uid://cm1vxngqgjc44" path="res://Scenes/CharacterGeneral/BufferTimer.tscn" id="22_o42l1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4c2k7"]
shader = ExtResource("1_r842q")
shader_parameter/blink_color = Color(0.776471, 0, 0, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlw5a"]
size = Vector2(20, 37)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hf6y7"]
shader = ExtResource("1_r842q")
shader_parameter/blink_color = Color(0.866667, 0, 0, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7mjs"]
size = Vector2(12, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0nj5"]
size = Vector2(19, 40.5)

[sub_resource type="Animation" id="Animation_2heor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ciwtm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HurtBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0x13p"]
resource_name = "attack_1"
length = 0.400007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_xtsf2"), ExtResource("3_xtsf2")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/HurtBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/HurtBox")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"generate_hit_id"
}]
}

[sub_resource type="Animation" id="Animation_vi5ng"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_ope30")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xho68"]
resource_name = "idle"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ciwtm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xb0we"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_kxuv8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_tomsy"]
resource_name = "move"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_rvfy7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_svep6"]
resource_name = "up_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("21_n2w74"), ExtResource("21_n2w74")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mg6rr"]
_data = {
"RESET": SubResource("Animation_2heor"),
"attack_1": SubResource("Animation_0x13p"),
"fall": SubResource("Animation_vi5ng"),
"idle": SubResource("Animation_xho68"),
"jump": SubResource("Animation_xb0we"),
"move": SubResource("Animation_tomsy"),
"up_attack": SubResource("Animation_svep6")
}

[node name="Player" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_4c2k7")
collision_mask = 2
script = ExtResource("1_21q2e")
stats = ExtResource("2_4kkqg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -18.5)
shape = SubResource("RectangleShape2D_wlw5a")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hf6y7")
position = Vector2(0, -64)
texture = ExtResource("3_ciwtm")
flip_h = true

[node name="HitBox" parent="Sprite" instance=ExtResource("5_rul6q")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitBox"]
position = Vector2(-2, 46.5)
shape = SubResource("RectangleShape2D_p7mjs")

[node name="HurtBox" parent="Sprite" instance=ExtResource("6_3pb5t")]
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HurtBox"]
position = Vector2(22.5, 44.25)
shape = SubResource("RectangleShape2D_l0nj5")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("context", "initial_state")]
script = ExtResource("7_456yf")
context = NodePath("..")
initial_state = NodePath("Idle")

[node name="Disabled" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "death", "hit")]
script = ExtResource("5_gdnv1")
idle = NodePath("../Idle")
death = NodePath("../Death")
hit = NodePath("../Hit")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("move", "jump", "attack", "up_attack", "fall", "disabled", "death", "hit")]
script = ExtResource("6_st8sj")
move = NodePath("../Move")
jump = NodePath("../Jump")
attack = NodePath("../Attack1")
up_attack = NodePath("../UpAttack")
fall = NodePath("../Fall")
disabled = NodePath("../Disabled")
death = NodePath("../Death")
hit = NodePath("../Hit")

[node name="Move" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "jump", "attack", "up_attack", "fall", "disabled", "death", "hit")]
script = ExtResource("7_psgwk")
idle = NodePath("../Idle")
jump = NodePath("../Jump")
attack = NodePath("../Attack1")
up_attack = NodePath("../UpAttack")
fall = NodePath("../Fall")
disabled = NodePath("../Disabled")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "move"

[node name="Jump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("fall", "idle", "hit")]
script = ExtResource("8_h7yd5")
fall = NodePath("../Fall")
idle = NodePath("../Idle")
hit = NodePath("../Hit")
state_anim = "jump"

[node name="Fall" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "death", "hit")]
script = ExtResource("9_vbw5a")
idle = NodePath("../Idle")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "fall"

[node name="Attack1" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "next_attack", "death", "hit")]
script = ExtResource("10_k6bx0")
idle = NodePath("../Idle")
next_attack = NodePath("../Attack2")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "attack_1"

[node name="Attack2" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "next_attack", "death", "hit")]
script = ExtResource("10_k6bx0")
idle = NodePath("../Idle")
next_attack = NodePath("../Attack3")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "attack_1"

[node name="Attack3" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "death", "hit")]
script = ExtResource("10_k6bx0")
idle = NodePath("../Idle")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "attack_1"

[node name="UpAttack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "death", "hit")]
script = ExtResource("11_3smkc")
idle = NodePath("../Idle")
death = NodePath("../Death")
hit = NodePath("../Hit")
state_anim = "up_attack"

[node name="Hit" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("fall", "death")]
script = ExtResource("17_ej8d0")
fall = NodePath("../Fall")
death = NodePath("../Death")
state_anim = null

[node name="HitTimer" type="Timer" parent="StateMachine/Hit"]
wait_time = 0.1

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("18_lsdg7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mg6rr")
}
autoplay = "idle"

[node name="Timers" type="Node" parent="."]

[node name="AttackCooldownTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="InvulnerabliltyTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="AttackBufferTimer" parent="Timers" instance=ExtResource("22_o42l1")]
wait_time = 0.1

[connection signal="timeout" from="StateMachine/Hit/HitTimer" to="StateMachine/Hit" method="_on_hit_timer_timeout"]
[connection signal="timeout" from="Timers/AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="Timers/InvulnerabliltyTimer" to="." method="_on_invulnerablilty_timer_timeout"]
